# ESP-Reverse_Tunneling_Libssh2

./: .gitignore  .replit  CHANGELOG.md  HEAP_CORRUPTION_FIXES.md  IMPROVEMENTS.md  LICENSE  Makefile  OPTIMISATIONS_TUNNEL.md  OPTIMIZATIONS_SUMMARY.md  OS400_PROBLEM_SOLUTION.md  README.md  RESUME_CORRECTIONS.md  config.h  config_ssh.h  esp32_reverse_tunnel.cpp  esp32_reverse_tunnel.ino  fix_libssh2_config.sh  fix_libssh2_simple.sh  library.json  library.properties  logger.h  network_manager.cpp  network_manager.h  network_optimizations.h  nginx_tunnel_config.conf  platformio.ini  readme  ssh_tunnel.cpp  ssh_tunnel.h  ssh_tunnel_old.cpp  test_build.sh  test_compilation.bat  test_compilation.sh  test_tunnel_performance.py
attached_assets/: Pasted--Create-a-session-instance-session-libssh2-session-init-if-session-DEBUG--1748442968666.txt  content-1748440785725.md
docs/: HOST_KEY_VERIFICATION.md  README.md  SSH_KEYS_MEMORY.md
examples/: README.md  basic_example.ino  esp32_reverse_tunnel_example.ino  fix_libssh2_esp.sh  fix_libssh2_simple.sh  nginx_tunnel_config.conf  platformio.ini
exemple/: esp32_reverse_tunnel.cpp
scripts/: check_no_french.sh
src/: ESP-Reverse_Tunneling_Libssh2.h  channel_close_progress.h  channel_slot_alloc.h  circuit_breaker.h  forward_accept_diag.h  logger.cpp  (+19 more)
test/integration/harness/: conftest.py  pyproject.toml  test_a_data_integrity.py  test_b_throughput_stability.py  test_d_channel_leaks.py  test_f_reconnect.py  test_g_backpressure.py
test/integration/harness/lib/: __init__.py  docker_ctl.py  pattern.py  serial_stats.py  thresholds.py
(+38 files in other folders)
