[project]
name = "tunnel-integration-harness"
version = "0.1.0"
description = "Integration test harness for ESP-Reverse_Tunneling_Libssh2"
requires-python = ">=3.11"
dependencies = [
  "pytest>=7.4",
  "pyserial>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
addopts = "--tb=short -ra"
log_cli = true
log_cli_level = "INFO"
